--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farhan Library</title>
+    <title>Hpme Page</title>
 </head>
 <body>
-    <h1>Farhan Marzuq Syadira</h1>
+    <h1>Farhan Library</h1>
     <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
-    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web
-        <I>homepage</I>
-        <b>First</b>Saya mencoba membuat <b><I>homepage</I>
-        </p>
+    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
+
+    <h4>Menu</h4>
+    <ul>
+        <li>
+            <a href="aboutme.html">Tentang Saya</a> 
+        </li>
+    </ul>
 </body>
-<a href="https://library.usu.ac.id/"</a>
 </html>
 
 
