--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td>Program Studi</td>
-            <td>Perpustakaan dan Sains Informasi</td>
+            <td>Perpustakaan dan Sains Informasi S-1</td>
         </tr>
         <tr>
             <td>Fakultas</td>
