--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,9 @@
             <td>No HP</td>
             <td>083163827460</td>
         </tr>
+	<tr>
+	    <td>Alamat</td>
+	    <td>Jl.Sidorukun No.28</td>
     </table>
         
    
