--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="aboutme.html">Tentang Saya</a> 
         </li>
+        <li>
+            <a href="contactus.html">Kritik dan Saran</a>
+        </li>
     </ul>
 </body>
 </html>
