--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
 		<title>Contact-Us</title>
  </head>
 <body>
-	<h1>Contact Us</h1>
+	<h1>Kritik dan Saran</h1>
 	<p>Silahkan berikan kritik dan saran untuk Farhan Library melalui form berikut:</p>
     <form>
         <label for="name">Nama:</label><br>
