--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Contact-Us</title>
+		<title>Kritik dan Saran</title>
  </head>
 <body>
 	<h1>Kritik dan Saran</h1>
