--- a/aboutme.html
+++ b/aboutme.html
@@ -39,5 +39,17 @@
 	    <td>Alamat</td>
 	    <td>Jl.Sidorukun No.28</td>
     </table>
+
+    <h4>Menu</h4>
+    <ul>
+        <li>
+            <a href="index.html">Halaman Utama</a>
+        </li>
+        <li>
+            <a href="contactus.html">Kritik dan Saran</a>
+        </li>
+    </ul>
+</body>
+</html>
         
    
