--- a/contactus.html
+++ b/contactus.html
@@ -21,5 +21,17 @@
 
         <button type="submit">Kirim</button>
     </form>
+
+    <h4>Menu</h4>
+    <ul>
+        <li>
+            <a href="index.html">Halaman Utama</a>
+        </li>
+        <li>
+            <a href="aboutme.html">Tentang saya</a>
+        </li>
+    </ul>
+</body>
+</html>
             
   
