--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="contactus.html">Kritik dan Saran</a>
         </li>
     </ul>
-    <a href="https://library.usu.ac.id/"> Perpustakaan USU </a>
+    <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
 </body>
 </html>
 
