--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
+<html>
+<head>
+    <style>
+        body {
+            background-color: lightblue; /* Mengatur warna latar belakang */
+        }
+    </style>
+</head>
 <body>
+<body>
+    
     <h1>Farhan Library</h1>
     <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
     <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
