--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         </li>
     </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
+
+    <script>
+    document.write("Pertanyaan?")
+    </script>
 </body>
 </html>
 
