--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         </li>
     </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
-
+    <body>
     <script>
     document.write("Pertanyaan?")
     </script>
+    </body>
 </body>
 </html>
 
