--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         </li>
     </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
-    <body>
+
+    <p id="nama-id></p>
     <script>
-    document.write("Pertanyaan?")
+            document.getElemenByld (nama-id).
+inner HTML="Hallo";
     </script>
-    </body>
 </body>
 </html>
 
