--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </li>
     </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
+    <p id="nama-id"></p>
+    <script>
+            document . getElementByld ( "nama-id" ).
+inner HTML="HALLO";
+    </script>
 </body>
 </html>
 
