--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
     <p id="nama-id"></p>
     <script>
-            document.getElementByld ("a4thrdrtfyvhbjbbu").
+            document.getElementByld ("aboutme.html").
 inner HTML="HALLO";
     </script>
 </body>
