--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
     </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
-    <p id="nama-id"></p>
+    <p id="aboutme.html"></p>
     <script>
             document.getElementByld ("aboutme.html").
 inner HTML="HALLO";
