--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <body>
     
-    <h1>Farhan Library</h1>
+ <center> <h1>Farhan Library</h1> </center>
     <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
     <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
 
