--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         body {
-            background-color: lightblue; /* Mengatur warna latar belakang */
+            background-color: brown; /* Mengatur warna latar belakang */
         }
     </style>
 </head>
