--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         body {
-            background-color: brown; /* Mengatur warna latar belakang */
+            background-color: light grey; /* Mengatur warna latar belakang */
         }
     </style>
 </head>
@@ -17,10 +17,10 @@
 <body>
     
  <center> <h1>Farhan Library</h1> </center>
-    <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
-    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
+   <center><h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2></center>
+    <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
-    <h4>Menu</h4>
+    <center><h4>Menu</h4></center>
     <ul>
         <li>
             <a href="aboutme.html">Tentang Saya</a> 
