--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <style>
         body {
-            background-color: light grey; /* Mengatur warna latar belakang */
+            background-color: cadet blue; /* Mengatur warna latar belakang */
         }
     </style>
 </head>
@@ -21,14 +21,14 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
-    <ul>
+    <center><ul>
         <li>
             <a href="aboutme.html">Tentang Saya</a> 
         </li>
         <li>
             <a href="contactus.html">Kritik dan Saran</a>
         </li>
-    </ul>
+    </ul></center>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
 </body>
