--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
-    <center><ul>
-        <li>
+    <ul>
+        <center><li>
             <a href="aboutme.html">Tentang Saya</a> 
-        </li>
-        <li>
+        </li></center>
+        <center><li>
             <a href="contactus.html">Kritik dan Saran</a>
-        </li>
-    </ul></center>
+        </li></center>
+    </ul>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
 </body>
