--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
-    <ul>
-        <center><li>
-            <a href="aboutme.html">Tentang Saya</a> 
-        </li></center>
-        <center><li>
-            <a href="contactus.html">Kritik dan Saran</a>
-        </li></center>
-    </ul>
+   <div class="button-container">
+       <button>Tentang Saya</button>
+   </div>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
 </body>
