--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <center><h4>Menu</h4></center>
    <div class="button-container">
        <button>Tentang Saya</button>
+       <li>
+            <a href="aboutme.html">Tentang Saya</a> 
+        </li>
    </div>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
