--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 
     <center><h4>Menu</h4></center>
    <div class="button-container">
-       <button>Tentang Saya</button>
-       <li>
-            <a href="aboutme.html">Tentang Saya</a> 
-        </li>
+       <button>Tentang Saya <a href="aboutme.html"a</a> </button>
+           
+       
    </div>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
