--- a/index.html
+++ b/index.html
@@ -21,8 +21,22 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
-   <div class="button-container">
-       <button>Tentang Saya <a href="aboutme.html"a</a> </button>
+  <!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contoh Tombol</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <button id="myButton" class="button">Klik Saya!</button>
+        <p id="message" class="hidden">Tombol telah diklik!</p>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
            
        
    </div>
