--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contoh Tombol</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Tentang Saya</title>
+    <link rel="stylesheet" href="aboutme.html">
 </head>
 <body>
     <div class="container">
-        <button id="myButton" class="button">Klik Saya!</button>
-        <p id="message" class="hidden">Tombol telah diklik!</p>
+        <button id="myButton" class="button">Tentang Saya</button>
     </div>
     <script src="script.js"></script>
 </body>
