--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
     <div class="container">
         <button id="myButton" class="button">Tentang Saya</button>
+        <a href="aboutme.html"</a> 
     </div>
     <script src="script.js"></script>
 </body>
