--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 <body>
     <div class="container">
-        <button id="myButton" class="button">Tentang Saya</button>
-        <a href="aboutme.html"</a> 
+        <button id="myButton" class="button">Tentang Saya
+        <a href="aboutme.html"</a></button>
     </div>
     <script src="script.js"></script>
 </body>
