--- a/index.html
+++ b/index.html
@@ -36,23 +36,26 @@
     <script src="aboutme.html"></script>
 </body>
 </html>
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-}
+<html>
+<head>
+    <style>
+        body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f0f0f0;
+        font-family: Arial, sans-serif;
+    }
 
-.container {
-    text-align: center;
-}
+    .container {
+        text-align: center;
+    }
 
-.button {
-    padding: 15px 30px;
-    font-size: 16px;
-    border: none;
+    .button {
+        padding: 15px 30px;
+        font-size: 16px;
+        border: none;
     border-radius: 5px;
     background-color: #007BFF;
     color: white;
@@ -67,9 +70,8 @@ body {
 .button:active {
     transform: scale(0.95);
 }
-           
-       
-   </div>
+            </style>
+</head>
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
 </body>
