--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
- 
+
+    <body>
+    <div class="container">
+        <a href="aboutme.html" class="button">Tentang Saya</a>
+    </div>
+    </body>
+   
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
 </body>
