--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <center><h4>Menu</h4></center>
 
     <body>
-    <div class="container">
-        <a href="aboutme.html" class="button">Tentang Saya</a>
-    </div>
-    </body>
+    <a href="aboutme.html" style="text-decoration: none;">
+        <button style="padding: 10px 20px; font-size: 16px;">Tentang Saya</button>
+    </a>
+</body>
    
     <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
    
