--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
     <body>
     <a href="aboutme.html" style="text-decoration: none;">
-        <button style="padding: 10px 20px; font-size: 16px;">Tentang Saya</button>
+        <button style="padding: 10px 20px; font-size: 16px; center">Tentang Saya</button>
+    </a>
+     <a href="contactus.html" style="text-decoration: none;">
+        <button style="padding: 10px 20px; font-size: 16px; center">Kritik dan Saran</button>
     </a>
 </body>
    
