--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
 
     <center><h4>Menu</h4></center>
+<!DOCTYPE html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,6 +62,7 @@
         <button>Kritik dan Saran</button>
     </a>
 </body>
+</html>
 
    
 <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
