--- a/index.html
+++ b/index.html
@@ -4,65 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-</head>
-<html>
-<head>
-    <style>
+ <style>
         body {
-            background-color: cadet blue; /* Mengatur warna latar belakang */
+            margin: 0;
+            font-family: times new roman, sans-serif;
+        }
+        .title-container {
+            text-align: center;
+            padding: 20px 0;
+            background-color: light blue;
+        }
+        h1 {
+            margin: 0;
         }
     </style>
-</head>
-<body>
-<body>
     
- <center> <h1>Farhan Library</h1> </center>
-   <center><h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2></center>
-    <center><p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p></center>
-
-    <center><h4>Menu</h4></center>
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tombol</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Mengatur tinggi halaman agar memenuhi viewport */
-            margin: 0; /* Menghilangkan margin default */
-            background-color: #f0f0f0; /* Warna latar belakang */
-        }
-        a {
-            text-decoration: none; /* Menghilangkan garis bawah pada link */
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #007BFF; /* Warna latar belakang tombol */
-            color: white; /* Warna teks tombol */
-            border: none; /* Menghilangkan border */
-            border-radius: 5px; /* Membuat sudut tombol melengkung */
-            cursor: pointer; /* Mengubah kursor saat hover */
-        }
-        button:hover {
-            background-color: #0056b3; /* Warna tombol saat hover */
-        }
-    </style>
-</head>
-<body>
-    <a href="aboutme.html">
-        <button>Tentang Saya</button>
-    </a>
-     
-    <a href="contactus.html">
-        <button>Kritik dan Saran</button>
-    </a>
-</body>
-</html>
+<h1>Farhan Library</h1> 
+   <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2><
+   <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
+    <h4>Menu</h4>
 
    
 <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
