--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         h1 {
             margin: 0;
         }
-    </style>
-    
+ </style>
+</head>
+<body>    
 <h1>Farhan Library</h1> 
-   <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2><
+   <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
     <h4>Menu</h4>
 
