--- a/index.html
+++ b/index.html
@@ -23,7 +23,35 @@
 <h1>Farhan Library</h1> 
    <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
-    <h4>Menu</h4>
+    
+   <h4>Menu</h4>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halaman Utama</title>
+    <style>
+        /* Gaya untuk tombol */
+        .my-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: blue;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .my-button:hover {
+            background-color: darkblue;
+        }
+    </style>
+</head>
+<body>
+    <h1>Selamat Datang di Halaman Utama</h1>
+    <p>Klik tombol di bawah ini untuk pergi ke halaman lain:</p>
+    <button class="my-button" onclick="window.location.href='aboutme.html'">Tentang Saya</button>
+</body>
 
    
 <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
