--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     </style>
 </head>
 <body>
-    <h1>Selamat Datang di Halaman Utama</h1>
-    <p>Klik tombol di bawah ini untuk pergi ke halaman lain:</p>
+    <p>Menu</p>
     <button class="my-button" onclick="window.location.href='aboutme.html'">Tentang Saya</button>
+    <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
+
 </body>
 
    
