--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin right: 20px
         }
 
         .my-button:hover {
