--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
         body {
             margin: 0;
             font-family: times new roman, sans-serif;
-        }
-        .title-container {
+        
+        .title-container 
             text-align: center;
             padding: 20px 0;
             background-color: light blue;
         }
-        h1 {
-            margin: 0;
-        }
+    
  </style>
 </head>
 <body>    
+
 <h1>Farhan Library</h1> 
    <h2>Saya Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
    <p>Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
