--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         body {
             margin: 0;
             font-family: times new roman, sans-serif;
+            text-align: center;
+        }
         
-        .title-container 
+        .title-container {
             text-align: center;
             padding: 20px 0;
             background-color: light blue;
