--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: times new roman, sans-serif;
             text-align: center;
-            background-color: light blue;
+            background-color: red;
         }
         
        
@@ -46,15 +46,14 @@
     </style>
 </head>
 <body>
-    <p>Menu</p>
     <button class="my-button" onclick="window.location.href='aboutme.html'">Tentang Saya</button>
     <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
 
 </body>
 
-   
-<a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
-   
+<body>
+    <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
+</body> 
 </body>
 </html>
 
