--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: times new roman, sans-serif;
             text-align: center;
-            background-color: red;
+            background-color: blue;
         }
          /* Gaya untuk tombol */
         .my-button {
@@ -27,16 +27,7 @@
         .my-button:hover {
             background-color: darkblue;
         }
-          /* Gaya untuk tautan */
-        .my-link {
-            display: block; /* Mengubah tautan menjadi elemen blok */
-            font-size: 16px;
-            color: blue;
-            text-decoration: none;
-        }
-
-        .my-link:hover {
-            text-decoration: underline; /* Menambahkan garis bawah saat hover */
+        
        
  </style>
 </head>
