--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,33 @@
     <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Kritik dan Saran</title>
- </head>
+ <style>
+        body {
+            margin: 0;
+            font-family: times new roman, sans-serif;
+            text-align: center;
+            background-color: blue;
+        }
+         /* Gaya untuk tombol */
+        .my-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: blue;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin right: 20px
+        }
+
+        .my-button:hover {
+            background-color: darkblue;
+        }
+        
+       
+ </style>
+</head>
 <body>
 	<h1>Kritik dan Saran</h1>
 	<p>Silahkan berikan kritik dan saran untuk Farhan Library melalui form berikut:</p>
