--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: times new roman, sans-serif;
             text-align: center;
-            background-color: blue;
+            background-color: #f0b3b3;
         }
          /* Gaya untuk tombol */
         .my-button {
