--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
             margin: 0;
             font-family: times new roman, sans-serif;
             text-align: center;
-            background-color: blue;
+            background-color:  #f0b3b3;
         }
          /* Gaya untuk tombol */
         .my-button {
             padding: 10px 20px;
             font-size: 16px;
             color: white;
-            background-color: blue;
+            background-color: black;
             border: none;
             border-radius: 5px;
             cursor: pointer;
