--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             padding: 10px 20px;
             font-size: 16px;
             color: white;
-            background-color: blue;
+            background-color: black;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -25,7 +25,7 @@
         }
 
         .my-button:hover {
-            background-color: darkblue;
+            background-color: grey;
         }
         
        
