--- a/aboutme.html
+++ b/aboutme.html
@@ -28,6 +28,11 @@
         .my-button:hover {
             background-color: grey;
         }
+
+	table
+	 border-radius: 8px;
+	 margin: 5%;
+	 table-align: center;
         
        
  </style>
