--- a/aboutme.html
+++ b/aboutme.html
@@ -29,18 +29,14 @@
             background-color: grey;
         }
 
-	table
-	 border-radius: 8px;
-	 margin: 5%;
-	 table-align: center;
-        
+	
        
  </style>
 </head>
 <body>
 	<h1>Tentang Saya</h1>
 	<p>halaman ini berisi Informasi tentang saya</p>
-    <table border="1" cellspacing="0" cellpadding="5">
+  <center>  <table border="1" cellspacing="0" cellpadding="5">
         <tr>
             <!-- td = tabel data -->
             <td><b>Nama</b></td>
@@ -69,7 +65,7 @@
 	<tr>
 	    <td>Alamat</td>
 	    <td>Jl.Sidorukun No.28</td>
-    </table>
+    </table> </center>
 
     <h4>Menu</h4>
     <body>
