--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
 
 
+<p>Kunjungi Perpustakaan Rujukan</p>
 <br>
+     <button class="my-button" onclick="window.location.href='https://library.usu.ac.id/'">Perpustakaan Rujukan</button>
 
-    <a href="https://library.usu.ac.id/" target= "_blank" > Perpustakaan USU </a>
+   
 
 </body>
 </html>
