--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
 
 <p>Kunjungi Perpustakaan Rujukan</p>
-<br>
      <button class="my-button" onclick="window.location.href='https://library.usu.ac.id/'">Perpustakaan Rujukan</button>
-
+     <button class="animated-button" id="libraryButton" onclick="gotolib()">
+        Kunjungi Perpustakaan Rujukan
+    </button>
    
 
 </body>
