--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
    
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="script.js"></script>
 </html>
 
 
