--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
 
 <p>Kunjungi Perpustakaan Rujukan</p>
-     <button class="my-button" onclick="window.location.href='https://library.usu.ac.id/'">Perpustakaan Rujukan</button>
-     <button class="animated-button" id="libraryButton" onclick="gotolib()">
+     <button class="my-button" id="libraryButton" onclick="gotolib()">
         Kunjungi Perpustakaan Rujukan
     </button>
    
