--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
         .my-button:hover {
             background-color: grey;
         }
-        
-       
+        footer {
+    background-color: grey;
+}
+
+footer p {
+    text-align: center;
+    padding: 10px;
+    color: white;
  </style>
 </head>
 <body>    
@@ -48,7 +54,9 @@
         Kunjungi Perpustakaan Rujukan
     </button>
    
-
+ <footer>
+        <p>&copy; WEB Praktik Farhan Marzuq Syadira, 2025</p>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="script.js"></script>
