--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,14 @@
             background-color: grey;
         }
 
+	 footer {
+    background-color: grey;
+}
+
+footer p {
+    text-align: center;
+    padding: 10px;
+    color: white;
 	
        
  </style>
@@ -71,6 +79,10 @@
     <body>
 	  <button class="my-button" onclick="window.location.href='index.html'">Halaman Utama</button>
           <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
+
+ <footer>
+        <p>&copy; WEB Praktik Farhan Marzuq Syadira, 2025</p>
+    </footer>
 </body>
 </html>
         
