--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             font-family: times new roman, sans-serif;
             text-align: center;
             background-color: #f0b3b3;
+            padding: 0;
+            display: grid;
+            min-height: 100vh;
+
         }
          /* Gaya untuk tombol */
         .my-button {
