--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
             font-family: times new roman, sans-serif;
             text-align: center;
             background-color: #f0b3b3;
-            padding: 0;
-            display: grid;
-            min-height: 100vh;
-
+           
         }
          /* Gaya untuk tombol */
         .my-button {
@@ -38,7 +35,7 @@
 footer p {
     text-align: center;
     padding: 10px;
-    color: white;
+    color: white;}
  </style>
 </head>
 <body>    
