--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         }
         footer {
     background-color: grey;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    min-height: 100vh;
+
 }
 
 footer p {
