--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         }
         footer {
     background-color: grey;
-    margin: 0;
-    padding: 0;
+    margin-top: 25px;
+    padding: 15px;
     display: grid;
     min-height: 100vh;
 
