--- a/contactus.html
+++ b/contactus.html
@@ -30,6 +30,10 @@
         }
 	 footer {
     background-color: grey;
+	 margin-top: 200px;
+    padding: 15px;
+    display: grid;
+    min-height: 100vh;
 }
 
 footer p {
