--- a/aboutme.html
+++ b/aboutme.html
@@ -31,6 +31,10 @@
 
 	 footer {
     background-color: grey;
+	 margin-top: 200px;
+    padding: 15px;
+    display: grid;
+    min-height: 100vh;
 }
 
 footer p {
