--- a/index.html
+++ b/index.html
@@ -37,10 +37,17 @@
 
 }
 
-footer p {
-    text-align: center;
-    padding: 10px;
-    color: white;}
+ footer {
+            background-color: black;
+            color: white;
+            padding: 15px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            font-size: 16px;
+            opacity: 0;
+            animation: slideUp 1.5s ease-in-out 1.5s forwards;
+ }
  </style>
 </head>
 <body>    
