--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
             font-size: 16px;
             opacity: 0;
             animation: slideUp 1.5s ease-in-out 1.5s forwards;
- }
+     }
+     @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+     }
+     @keyframes slideUp {
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+    }
  </style>
 </head>
 <body>    
