--- a/aboutme.html
+++ b/aboutme.html
@@ -28,19 +28,25 @@
         .my-button:hover {
             background-color: grey;
         }
-
 	 footer {
-    background-color: grey;
-	 margin-top: 200px;
-    padding: 15px;
-    display: grid;
-    min-height: 25vh;
-}
-
-footer p {
-    text-align: center;
-    padding: 10px;
-    color: white;
+            background-color: black;
+            color: white;
+            padding: 15px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            font-size: 16px;
+            opacity: 0;
+            animation: slideUp 1.5s ease-in-out 1.5s forwards;
+     }
+     @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+     }
+     @keyframes slideUp {
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+    }
 	
        
  </style>
