--- a/aboutme.html
+++ b/aboutme.html
@@ -89,6 +89,7 @@
     <body>
 	  <button class="my-button" onclick="window.location.href='index.html'">Halaman Utama</button>
           <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
+	  <button class="my-button" onclick="window.location.href='https://www.linkedin.com/in/farhan-syadira-847b96365/'">LinkedIn</button>
 
  <footer>
         <p>&copy; WEB Praktik Farhan Marzuq Syadira, 2025</p>
