--- a/contactus.html
+++ b/contactus.html
@@ -54,12 +54,19 @@
 <body>
 	<h1>Kritik dan Saran</h1>
 	<p>Silahkan berikan kritik dan saran untuk Farhan Library melalui form berikut:</p>
+<form action="https://formsubmit.co/farhansyadira25@gmail.com" method="POST">
+     <input type="text" name="name" required>
+     <input type="email" name="email" required>
+     <input type="Kritik dan Saran" name="Kritik dan Saran" required>
+     <button type="submit">Send</button>
+</form>
+	
     <form>
         <label for="name">Nama:</label><br>
         <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required><br><br>
 
-        <label for="ID Pemustaka">ID Pemustaka:</label><br>
-        <input type="ID Pemustaka" id="ID Pemustaka" name="ID Pemuustaka" placeholder="Masukkan ID Anda" required><br><br>
+        <label for="Email">Email:</label><br>
+        <input type="Email" id="Email" name="Email" placeholder="Masukkan Email Anda" required><br><br>
 
         <label for="Kritik dan Saran">Kritik dan Saran:</label><br>
         <textarea id="Kritik dan Saran" name="Kritik dan Saran" rows="5" placeholder="Masukkan Kritik dan Saran" required></textarea><br><br>
