--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@
 <body>
 	<h1>Kritik dan Saran</h1>
 	<p>Silahkan berikan kritik dan saran untuk Farhan Library melalui form berikut:</p>
-<form action="https://formsubmit.co/farhansyadira25@gmail.com" method="POST">
+<form class="formulir form-container"action="https://formsubmit.co/farhansyadira25@gmail.com" method="POST">
     
 </form>
 	
