--- a/aboutme.html
+++ b/aboutme.html
@@ -1,100 +1,84 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>About Me</title>
- <style>
-        body {
-            margin: 0;
-            font-family: times new roman, sans-serif;
-            text-align: center;
-            background-color:  #f0b3b3;
-        }
-         /* Gaya untuk tombol */
-        .my-button {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: black;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin right: 20px
-        }
-
-        .my-button:hover {
-            background-color: grey;
-        }
-	 footer {
-            background-color: black;
-            color: white;
-            padding: 15px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            font-size: 16px;
-            opacity: 0;
-            animation: slideUp 1.5s ease-in-out 1.5s forwards;
-     }
-     @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-     }
-     @keyframes slideUp {
-            from { transform: translateY(50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tentang Saya - Farhan Library</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
     }
-	
-       
- </style>
+    h1, h2 {
+      font-family: 'Playfair Display', serif;
+    }
+  </style>
 </head>
-<body>
-	<h1>Tentang Saya</h1>
-	<p>halaman ini berisi Informasi tentang saya</p>
-  <center>  <table border="1" cellspacing="0" cellpadding="5">
-        <tr>
-            <!-- td = tabel data -->
-            <td><b>Nama</b></td>
-            <td>Farhan Marzuq Syadira</td>
-        </tr>
-        <tr>
-            <td>NIM</td>
-            <td>220709060</td>
-        </tr>
-        <tr>
-            <td>Program Studi</td>
-            <td>Perpustakaan dan Sains Informasi S-1</td>
-        </tr>
-        <tr>
-            <td>Fakultas</td>
-            <td>Fakultas Ilmu Budaya</td>
-        </tr>
-        <tr>
-            <td>Universitas</td>
-            <td>Universitas Sumatera Utara</td>
-        </tr>
-        <tr>
-            <td>No HP</td>
-            <td>083163827460</td>
-        </tr>
-	<tr>
-	    <td>Alamat</td>
-	    <td>Jl.Sidorukun No.28</td>
-    </table> </center>
+<body class="bg-gradient-to-r from-pink-200 to-rose-200 min-h-screen flex flex-col">
 
-    <h4>Menu</h4>
-    <body>
-	  <button class="my-button" onclick="window.location.href='index.html'">Halaman Utama</button>
-          <button class="my-button" onclick="window.location.href='contactus.html'">Kritik dan Saran</button>
-	  <button class="my-button" onclick="window.location.href='https://www.linkedin.com/in/farhan-syadira-847b96365/'">LinkedIn</button>
+  <!-- Navigation Bar -->
+  <nav class="bg-gray-900 text-white px-6 py-4 shadow-md">
+    <div class="container mx-auto flex justify-between items-center">
+      <div class="text-2xl font-bold">📚 Farhan Library</div>
+      <div class="space-x-6 text-sm md:text-base">
+        <a href="index.html" class="hover:text-pink-300 transition">Beranda</a>
+        <a href="aboutme.html" class="hover:text-pink-300 transition font-semibold underline">Tentang Saya</a>
+        <a href="contactus.html" class="hover:text-pink-300 transition">Kritik & Saran</a>
+        <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" class="hover:text-pink-300 transition" target="_blank">LinkedIn</a>
+      </div>
+    </div>
+  </nav>
 
- <footer>
-        <p>&copy; WEB Praktik Farhan Marzuq Syadira, 2025</p>
-    </footer>
+  <!-- Header -->
+  <header class="text-center py-10">
+    <h1 class="text-3xl font-bold text-gray-800">Tentang Saya</h1>
+    <p class="text-gray-700 mt-2">Halaman ini berisi informasi pribadi saya sebagai mahasiswa.</p>
+  </header>
+
+  <!-- Bio Table -->
+  <main class="flex-grow flex justify-center items-start px-4">
+    <div class="bg-white rounded-xl shadow-md p-6 w-full max-w-2xl">
+      <table class="w-full table-auto border border-gray-300 text-left">
+        <tbody>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2 w-1/3">Nama</td>
+            <td class="px-4 py-2">Farhan Marzuq Syadira</td>
+          </tr>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2">NIM</td>
+            <td class="px-4 py-2">220709060</td>
+          </tr>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2">Program Studi</td>
+            <td class="px-4 py-2">Perpustakaan dan Sains Informasi S-1</td>
+          </tr>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2">Fakultas</td>
+            <td class="px-4 py-2">Fakultas Ilmu Budaya</td>
+          </tr>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2">Universitas</td>
+            <td class="px-4 py-2">Universitas Sumatera Utara</td>
+          </tr>
+          <tr class="border-b">
+            <td class="font-semibold px-4 py-2">No HP</td>
+            <td class="px-4 py-2">083163827460</td>
+          </tr>
+          <tr>
+            <td class="font-semibold px-4 py-2">Alamat</td>
+            <td class="px-4 py-2">Jl. Sidorukun No.28</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-white text-center py-4 mt-10">
+    &copy; WEB Praktik Farhan Marzuq Syadira, 2025
+  </footer>
 </body>
 </html>
-        
-   
