--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,6 @@
         <a href="index.html" class="hover:text-pink-300 transition">Beranda</a>
         <a href="aboutme.html" class="hover:text-pink-300 transition font-semibold underline">Tentang Saya</a>
         <a href="contactus.html" class="hover:text-pink-300 transition">Kritik & Saran</a>
-        <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" class="hover:text-pink-300 transition" target="_blank">LinkedIn</a>
       </div>
     </div>
   </nav>
@@ -36,6 +35,14 @@
   <header class="text-center py-10">
     <h1 class="text-3xl font-bold text-gray-800">Tentang Saya</h1>
     <p class="text-gray-700 mt-2">Halaman ini berisi informasi pribadi saya sebagai mahasiswa.</p>
+    
+    <!-- LinkedIn Button -->
+    <div class="mt-4">
+      <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" target="_blank"
+         class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg shadow-md transition">
+        Kunjungi LinkedIn Saya
+      </a>
+    </div>
   </header>
 
   <!-- Bio Table -->
