--- a/aboutme.html
+++ b/aboutme.html
@@ -19,13 +19,26 @@
 </head>
 <body class="bg-gradient-to-r from-pink-200 to-rose-200 min-h-screen flex flex-col">
 
-  <!-- Navigation Bar -->
-  <nav class="bg-gray-900 text-white px-6 py-4 shadow-md">
+  <!-- Navigation Bar with Dropdown -->
+  <nav class="bg-gray-900 text-white px-6 py-4 shadow-md relative">
     <div class="container mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold">📚 Farhan Library</div>
-      <div class="space-x-6 text-sm md:text-base">
+      <div class="space-x-6 text-sm md:text-base relative group">
         <a href="index.html" class="hover:text-pink-300 transition">Beranda</a>
-        <a href="aboutme.html" class="hover:text-pink-300 transition font-semibold underline">Tentang Saya</a>
+
+        <!-- Dropdown Parent -->
+        <div class="inline-block relative">
+          <button class="hover:text-pink-300 transition focus:outline-none">
+            Tentang Saya ▾
+          </button>
+
+          <!-- Dropdown Menu -->
+          <div class="absolute hidden group-hover:block bg-white text-gray-800 rounded shadow-lg mt-2 min-w-[150px] z-10">
+            <a href="aboutme.html" class="block px-4 py-2 hover:bg-gray-100">Profil Saya</a>
+            <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" target="_blank" class="block px-4 py-2 hover:bg-gray-100">LinkedIn</a>
+          </div>
+        </div>
+
         <a href="contactus.html" class="hover:text-pink-300 transition">Kritik & Saran</a>
       </div>
     </div>
@@ -35,14 +48,6 @@
   <header class="text-center py-10">
     <h1 class="text-3xl font-bold text-gray-800">Tentang Saya</h1>
     <p class="text-gray-700 mt-2">Halaman ini berisi informasi pribadi saya sebagai mahasiswa.</p>
-    
-    <!-- LinkedIn Button -->
-    <div class="mt-4">
-      <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" target="_blank"
-         class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg shadow-md transition">
-        Kunjungi LinkedIn Saya
-      </a>
-    </div>
   </header>
 
   <!-- Bio Table -->
@@ -87,5 +92,6 @@
   <footer class="bg-gray-900 text-white text-center py-4 mt-10">
     &copy; WEB Praktik Farhan Marzuq Syadira, 2025
   </footer>
+
 </body>
 </html>
