--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-blue-100 to-blue-200 flex flex-col min-h-screen">
+<body class="bg-gradient-to-r from-blue-800 to-blue-600 flex flex-col min-h-screen text-white">
+
 
   <!-- Navigation Bar -->
   <nav class="bg-blue-900 text-white px-6 py-4 shadow-md">
