--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-blue-800 to-blue-600 flex flex-col min-h-screen text-white">
+<body class="bg-gradient-to-r from-blue-800 to-bg-yellow-100 flex flex-col min-h-screen text-white">
 
 
   <!-- Navigation Bar -->
