--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-blue-800 to-bg-yellow-100 flex flex-col min-h-screen text-white">
+<body class="bg-gradient-to-r from-amber-50 to-lime-100 flex flex-col min-h-screen text-white">
 
 
   <!-- Navigation Bar -->
-  <nav class="bg-blue-900 text-white px-6 py-4 shadow-md">
+  <nav class="bg-emerald-700 text-white px-6 py-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold">📘 Farhan Library</div>
       <div class="space-x-6 text-sm md:text-base flex items-center relative group">
         <!-- Dropdown Menu -->
         <div class="relative group">
-          <button class="hover:text-blue-300 transition focus:outline-none">
+          <button class="hover:hover:text-amber-400 transition focus:outline-none">
             Beranda ▾
           </button>
           <div class="absolute hidden group-hover:block bg-white text-blue-900 rounded shadow-lg mt-2 min-w-[180px] z-10">
