--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-amber-50 to-lime-100 flex flex-col min-h-screen text-white">
-
+<body class="bg-gradient-to-r from-amber-50 to-lime-100 flex flex-col min-h-screen text-gray-800">
 
   <!-- Navigation Bar -->
   <nav class="bg-emerald-700 text-white px-6 py-4 shadow-md">
@@ -29,7 +28,7 @@
       <div class="space-x-6 text-sm md:text-base flex items-center relative group">
         <!-- Dropdown Menu -->
         <div class="relative group">
-          <button class="hover:hover:text-amber-400 transition focus:outline-none">
+          <button class="hover:text-amber-300 transition focus:outline-none">
             Beranda ▾
           </button>
           <div class="absolute hidden group-hover:block bg-white text-blue-900 rounded shadow-lg mt-2 min-w-[180px] z-10">
@@ -37,21 +36,21 @@
             <a href="#" onclick="gotolib()" class="block px-4 py-2 hover:bg-blue-100">Perpustakaan Rujukan</a>
           </div>
         </div>
-        <a href="aboutme.html" class="hover:text-blue-300 transition">Tentang Saya</a>
-        <a href="contactus.html" class="hover:text-blue-300 transition">Kritik & Saran</a>
+        <a href="aboutme.html" class="hover:text-amber-300 transition">Tentang Saya</a>
+        <a href="contactus.html" class="hover:text-amber-300 transition">Kritik & Saran</a>
       </div>
     </div>
   </nav>
 
   <!-- Header -->
-  <header class="text-center py-10">
+  <header class="text-center py-10 bg-white">
     <h1 class="text-4xl font-bold text-blue-900">Selamat Datang di Farhan Library</h1>
     <h2 class="text-xl text-blue-800 mt-2">Mahasiswa Program Studi Perpustakaan dan Sains Informasi</h2>
     <p class="text-blue-700 mt-2">Web ini adalah pemenuhan tugas Mata Kuliah Pengembangan Web</p>
   </header>
 
   <!-- Menu -->
-  <main class="flex flex-col items-center space-y-6 flex-grow">
+  <main class="flex flex-col items-center space-y-6 flex-grow bg-white py-10">
     <h4 class="text-lg font-semibold text-blue-800">Menu Cepat</h4>
     <div class="flex flex-wrap justify-center gap-4">
       <button onclick="window.location.href='aboutme.html'" class="px-5 py-3 bg-blue-900 text-white rounded-lg hover:bg-blue-700 transition">Tentang Saya</button>
