--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-amber-50 to-lime-100 flex flex-col min-h-screen text-gray-800">
+<body class="bg-gradient-to-r from-blue-50 to-blue-100 flex flex-col min-h-screen text-gray-800">
 
   <!-- Navigation Bar -->
-  <nav class="bg-emerald-700 text-white px-6 py-4 shadow-md">
+  <nav class="bg-blue-800 text-white px-6 py-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold">📘 Farhan Library</div>
       <div class="space-x-6 text-sm md:text-base flex items-center relative group">
         <!-- Dropdown Menu -->
         <div class="relative group">
-          <button class="hover:text-amber-300 transition focus:outline-none">
+          <button class="hover:text-blue-300 transition focus:outline-none">
             Beranda ▾
           </button>
           <div class="absolute hidden group-hover:block bg-white text-blue-900 rounded shadow-lg mt-2 min-w-[180px] z-10">
@@ -36,8 +36,8 @@
             <a href="#" onclick="gotolib()" class="block px-4 py-2 hover:bg-blue-100">Perpustakaan Rujukan</a>
           </div>
         </div>
-        <a href="aboutme.html" class="hover:text-amber-300 transition">Tentang Saya</a>
-        <a href="contactus.html" class="hover:text-amber-300 transition">Kritik & Saran</a>
+        <a href="aboutme.html" class="hover:text-blue-300 transition">Tentang Saya</a>
+        <a href="contactus.html" class="hover:text-blue-300 transition">Kritik & Saran</a>
       </div>
     </div>
   </nav>
@@ -53,13 +53,13 @@
   <main class="flex flex-col items-center space-y-6 flex-grow bg-white py-10">
     <h4 class="text-lg font-semibold text-blue-800">Menu Cepat</h4>
     <div class="flex flex-wrap justify-center gap-4">
-      <button onclick="window.location.href='aboutme.html'" class="px-5 py-3 bg-blue-900 text-white rounded-lg hover:bg-blue-700 transition">Tentang Saya</button>
-      <button onclick="window.location.href='contactus.html'" class="px-5 py-3 bg-blue-900 text-white rounded-lg hover:bg-blue-700 transition">Kritik dan Saran</button>
+      <button onclick="window.location.href='aboutme.html'" class="px-5 py-3 bg-blue-700 text-white rounded-lg hover:bg-blue-600 transition">Tentang Saya</button>
+      <button onclick="window.location.href='contactus.html'" class="px-5 py-3 bg-blue-700 text-white rounded-lg hover:bg-blue-600 transition">Kritik dan Saran</button>
     </div>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-blue-900 text-white text-center py-4">
+  <footer class="bg-blue-800 text-white text-center py-4">
     &copy; WEB Praktik Farhan Marzuq Syadira, 2025
   </footer>
 
