--- a/aboutme.html
+++ b/aboutme.html
@@ -17,37 +17,36 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-r from-pink-200 to-rose-200 min-h-screen flex flex-col">
+<body class="bg-gradient-to-r from-blue-50 to-blue-100 min-h-screen flex flex-col text-gray-800">
 
-  <!-- Navigation Bar with Dropdown -->
-  <nav class="bg-gray-900 text-white px-6 py-4 shadow-md relative">
+  <!-- Navbar -->
+  <nav class="bg-blue-800 text-white px-6 py-4 shadow-md relative">
     <div class="container mx-auto flex justify-between items-center">
-      <div class="text-2xl font-bold">📚 Farhan Library</div>
+      <div class="text-2xl font-bold">📘 Farhan Library</div>
       <div class="space-x-6 text-sm md:text-base relative group">
-        <a href="index.html" class="hover:text-pink-300 transition">Beranda</a>
+        <a href="index.html" class="hover:text-blue-300 transition">Beranda</a>
 
         <!-- Dropdown Parent -->
-        <div class="inline-block relative">
-          <button class="hover:text-pink-300 transition focus:outline-none">
+        <div class="inline-block relative group">
+          <button class="hover:text-blue-300 transition focus:outline-none">
             Tentang Saya ▾
           </button>
-
           <!-- Dropdown Menu -->
-          <div class="absolute hidden group-hover:block bg-white text-gray-800 rounded shadow-lg mt-2 min-w-[150px] z-10">
-            <a href="aboutme.html" class="block px-4 py-2 hover:bg-gray-100">Profil Saya</a>
-            <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" target="_blank" class="block px-4 py-2 hover:bg-gray-100">LinkedIn</a>
+          <div class="absolute hidden group-hover:block bg-white text-blue-900 rounded shadow-lg mt-2 min-w-[150px] z-10">
+            <a href="aboutme.html" class="block px-4 py-2 hover:bg-blue-100">Profil Saya</a>
+            <a href="https://www.linkedin.com/in/farhan-syadira-847b96365/" target="_blank" class="block px-4 py-2 hover:bg-blue-100">LinkedIn</a>
           </div>
         </div>
 
-        <a href="contactus.html" class="hover:text-pink-300 transition">Kritik & Saran</a>
+        <a href="contactus.html" class="hover:text-blue-300 transition">Kritik & Saran</a>
       </div>
     </div>
   </nav>
 
   <!-- Header -->
   <header class="text-center py-10">
-    <h1 class="text-3xl font-bold text-gray-800">Tentang Saya</h1>
-    <p class="text-gray-700 mt-2">Halaman ini berisi informasi pribadi saya sebagai mahasiswa.</p>
+    <h1 class="text-3xl font-bold text-blue-900">Tentang Saya</h1>
+    <p class="text-blue-700 mt-2">Halaman ini berisi informasi pribadi saya sebagai mahasiswa.</p>
   </header>
 
   <!-- Bio Table -->
@@ -89,7 +88,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center py-4 mt-10">
+  <footer class="bg-blue-800 text-white text-center py-4 mt-10">
     &copy; WEB Praktik Farhan Marzuq Syadira, 2025
   </footer>
 
